--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,3 +3,9 @@
     height: 80px;
     margin-bottom: 100px;
 }
+
+@media only screen and (max-width: 510px) {
+    .navBar {
+        margin-bottom: 50px;
+    }
+}
